tests/invalid/type/manual_ex028.pts
function main() : void {
    string s = "a" + "b";
}
